solid/src/main/java/org/example/L/good/Penguin.java
package org.example.L.good;

public class Penguin extends Bird {

}
