solid/src/main/java/org/example/L/Bad/Duck.java
package org.example.L.Bad;

public class Duck extends Bird{

}
